@@ -92,10 +92,13 @@
 	<tr class="{% cycle 'row1' 'row2' %}">
 		<td>
 			{% if file.directory %}<span class="folder">D</span>{% endif %}	
+            
 		</td>
 		<td>
 			<a href="{% if file.directory %}{% url admin_file_manager_list file.fileurl %}{% else %}/{{ file.fileurl }}{% endif %}">{{ file.filename }}</a>
-
+            {% if file.link %}
+                [{% if file.broken_link %}Broken {% endif %}Link]
+            {% endif %}
 		</td>
 		<td>
 			{% if not file.directory %}
